# PCD_sampling_py

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
benchmarking/: benchmark.py  benchmark_convergence.py  benchmark_norm_per_step.py  benchmark_sampling_methods.py  compare_configs.py  cvm.py
benchmarking/benchmarking_configs/: config_1.yaml  config_large.yaml  config_large_lists.yaml  config_large_lists_cpu.yaml  config_with_threshold2.yaml  config_with_treshold.yaml
benchmarking/benchmarking_results/: pcd_moment_errors_dim=2_comp=2_steps=40.csv  pcd_norms_dim=2_comp=2_steps=40.csv  pcd_results_cuda_dim=2,comp=2,K=1000,steps=40.csv  pcd_results_cuda_dim=2,comp=2,K=1000,threshold=0.00001.csv  pcd_results_cuda_dim=2,comp=2,K=1000,threshold=0.0001.csv
examples/: example.py  ut_example.py  ut_moment_matching.py
src/: example.py  models.py  pcd_sampling.py  sampling_utils.py
src/examples/: example.py
src/pcd_sampling/: models.py  pcd_sampling.py  sampling_utils.py
src/pcd_sampling_py/: lookup_table.py  models.py  sampler.py  sampling_utils.py
src/pcd_sampling_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py  test_example.py  test_lookup_table.py
