[project]
name = "pcd-sampling-py"
version = "0.1.0"
description = "PCD sampling methods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest-cov",
    "pytest>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pcd_sampling_py --cov-report=term-missing --cov-report=xml --cov-report=html"
testpaths = [
    "tests",
]
