[project]
name = "pcd-sampling-py"
version = "0.1.0"
description = "PCD sampling methods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
